Loris -- History of visible changes.

Loris is Copyright (C) 1999-2001 by Kelly Fitz and Lippold Haken 
<loris@cerlsoundgroup.org>.
See the end for copying conditions.

Please send Loris bug reports to loris@cerlsoundgroup.org.

-------------------------------------------------------
changes since 1.0 release:

- added compile-time checks to ensure that fftw_complex
is compatible with std::compelx<double>, in 
FourierTransform.C.

- fixed sloppy coding (bad use of vector iterators to get
pointers) that caused compile errors under new versions
of CodeWarrior and gcc (3).

- added prebinding to Darwin build, though it won't
do anything until prebound versions of SDIF and FFTW
are available.

- removed old Mac OS project files, etc, since they
were never up-to-date anyway, and too difficult to 
maintain.

-------------------------------------------------------
changes since 1.0beta9 release:

- Updated documentation (finally) including C++
API documentation (finally).

- added assignment operator to Oscillator so that STL
containers of them can be used

- made FrequencyReference a subclass (implementor) of 
the Envelope interface, restricted access to its 
BreakpointEnvelope to const.

- made FrequencyReference use all Breakpoints in the 
reference Partial when the number of samples is not
specified.

- Sieve no longer sorts Partial list, and therefore no
longer needs the list itself as an argument to sift(),
can pass just iterators.

- Greatly improved the Sieve interface, made it generic
(container-type independent).

- Morpher interface radically improved to expose much 
more morphing functionality. 

- Added PartialPtrs class, a container of pointers to 
Partials, used internally to make algorithms more generic.

- Removed FadeTime() member from class Partial, added fade 
time as a parameter to classes Distiller, Synthesizer, and
Sieve (replacing minGapTime, which is twice the fade time).

-------------------------------------------------------